Java 25 optimizations, code cleanup and formatting