@@ -1,113 +1,67 @@
 package com.artificesoft.cpusced;
 
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
+import java.util.*;
 
-public class PriorityPreemptive extends CPUScheduler
-{
+public class PriorityPreemptive extends CPUScheduler {
     @Override
-    public void process()
-    {
-        Collections.sort(this.getRows(), (Object o1, Object o2) -> {
-            if (((Row) o1).getArrivalTime() == ((Row) o2).getArrivalTime())
-            {
-                return 0;
-            }
-            else if (((Row) o1).getArrivalTime() < ((Row) o2).getArrivalTime())
-            {
-                return -1;
-            }
-            else
-            {
-                return 1;
-            }
-        });
-        
+    public void process() {
+        this.getRows().sort(Comparator.comparingInt((Object o) -> ((Row) o).getArrivalTime()));
+
         List<Row> rows = Utility.deepCopy(this.getRows());
-        int time = rows.get(0).getArrivalTime();
-        
-        while (!rows.isEmpty())
-        {
-            List<Row> availableRows = new ArrayList();
-            
-            for (Row row : rows)
-            {
-                if (row.getArrivalTime() <= time)
-                {
+        int time = rows.getFirst().getArrivalTime();
+
+        while (!rows.isEmpty()) {
+            List<Row> availableRows = new ArrayList<>();
+
+            for (Row row : rows) {
+                if (row.getArrivalTime() <= time) {
                     availableRows.add(row);
                 }
             }
-            
-            Collections.sort(availableRows, (Object o1, Object o2) -> {
-                if (((Row) o1).getPriorityLevel()== ((Row) o2).getPriorityLevel())
-                {
-                    return 0;
-                }
-                else if (((Row) o1).getPriorityLevel() < ((Row) o2).getPriorityLevel())
-                {
-                    return -1;
-                }
-                else
-                {
-                    return 1;
-                }
-            });
-            
-            Row row = availableRows.get(0);
+
+            availableRows.sort(Comparator.comparingInt((Object o) -> ((Row) o).getPriorityLevel()));
+
+            Row row = availableRows.getFirst();
             this.getTimeline().add(new Event(row.getProcessName(), time, ++time));
             row.setBurstTime(row.getBurstTime() - 1);
-            
-            if (row.getBurstTime() == 0)
-            {
-                for (int i = 0; i < rows.size(); i++)
-                {
-                    if (rows.get(i).getProcessName().equals(row.getProcessName()))
-                    {
+
+            if (row.getBurstTime() == 0) {
+                for (int i = 0; i < rows.size(); i++) {
+                    if (rows.get(i).getProcessName().equals(row.getProcessName())) {
                         rows.remove(i);
                         break;
                     }
                 }
             }
         }
-        
-        for (int i = this.getTimeline().size() - 1; i > 0; i--)
-        {
+
+        for (int i = this.getTimeline().size() - 1; i > 0; i--) {
             List<Event> timeline = this.getTimeline();
-            
-            if (timeline.get(i - 1).getProcessName().equals(timeline.get(i).getProcessName()))
-            {
+
+            if (timeline.get(i - 1).getProcessName().equals(timeline.get(i).getProcessName())) {
                 timeline.get(i - 1).setFinishTime(timeline.get(i).getFinishTime());
                 timeline.remove(i);
             }
         }
-        
-        Map map = new HashMap();
-        
-        for (Row row : this.getRows())
-        {
+
+        Map<String, Integer> map = new HashMap<>();
+
+        for (Row row : this.getRows()) {
             map.clear();
-            
-            for (Event event : this.getTimeline())
-            {
-                if (event.getProcessName().equals(row.getProcessName()))
-                {
-                    if (map.containsKey(event.getProcessName()))
-                    {
-                        int w = event.getStartTime() - (int) map.get(event.getProcessName());
+
+            for (Event event : this.getTimeline()) {
+                if (event.getProcessName().equals(row.getProcessName())) {
+                    if (map.containsKey(event.getProcessName())) {
+                        int w = event.getStartTime() - map.get(event.getProcessName());
                         row.setWaitingTime(row.getWaitingTime() + w);
-                    }
-                    else
-                    {
+                    } else {
                         row.setWaitingTime(event.getStartTime() - row.getArrivalTime());
                     }
-                    
+
                     map.put(event.getProcessName(), event.getFinishTime());
                 }
             }
-            
+
             row.setTurnaroundTime(row.getWaitingTime() + row.getBurstTime());
         }
     }
