@@ -1,63 +1,41 @@
 package com.artificesoft.cpusced;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 
-public class ShortestJobFirst extends CPUScheduler
-{
+public class ShortestJobFirst extends CPUScheduler {
     @Override
-    public void process()
-    {
+    public void process() {
         this.getRows().sort(Comparator.comparingInt((Object o) -> ((Row) o).getArrivalTime()));
-        
+
         List<Row> rows = Utility.deepCopy(this.getRows());
-        int time = rows.get(0).getArrivalTime();
-        
-        while (!rows.isEmpty())
-        {
-            List<Row> availableRows = new ArrayList();
-            
-            for (Row row : rows)
-            {
-                if (row.getArrivalTime() <= time)
-                {
+        int time = rows.getFirst().getArrivalTime();
+
+        while (!rows.isEmpty()) {
+            List<Row> availableRows = new ArrayList<>();
+
+            for (Row row : rows) {
+                if (row.getArrivalTime() <= time) {
                     availableRows.add(row);
                 }
             }
-            
-            Collections.sort(availableRows, (Object o1, Object o2) -> {
-                if (((Row) o1).getBurstTime() == ((Row) o2).getBurstTime())
-                {
-                    return 0;
-                }
-                else if (((Row) o1).getBurstTime() < ((Row) o2).getBurstTime())
-                {
-                    return -1;
-                }
-                else
-                {
-                    return 1;
-                }
-            });
-            
-            Row row = availableRows.get(0);
+
+            availableRows.sort(Comparator.comparingInt((Object o) -> ((Row) o).getBurstTime()));
+
+            Row row = availableRows.getFirst();
             this.getTimeline().add(new Event(row.getProcessName(), time, time + row.getBurstTime()));
             time += row.getBurstTime();
-            
-            for (int i = 0; i < rows.size(); i++)
-            {
-                if (rows.get(i).getProcessName().equals(row.getProcessName()))
-                {
+
+            for (int i = 0; i < rows.size(); i++) {
+                if (rows.get(i).getProcessName().equals(row.getProcessName())) {
                     rows.remove(i);
                     break;
                 }
             }
         }
-        
-        for (Row row : this.getRows())
-        {
+
+        for (Row row : this.getRows()) {
             row.setWaitingTime(this.getEvent(row).getStartTime() - row.getArrivalTime());
             row.setTurnaroundTime(row.getWaitingTime() + row.getBurstTime());
         }
